force-app/main/default/objects/Trade__c/fields/Account_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Client_Code__c</fullName>
    <formula>Account__r.Client_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Client Code</label>
    <type>Text</type>
</CustomField>