force-app/main/default/objects/Trade__c/fields/Blockchain_Network__c.field-meta.xml
<CustomField>
    <fullName>Blockchain_Network__c</fullName>
    <label>Blockchain Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ethereum</fullName>
            </value>
            <value>
                <fullName>Tron</fullName>
            </value>
            <value>
                <fullName>Bitcoin</fullName>
            </value>
            <value>
                <fullName>Solana</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>