force-app/main/default/objects/Trade__c/fields/Buy__c.field-meta.xml
<CustomField>
    <fullName>Buy__c</fullName>
    <label>Buy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buy</valueSetName>
    </valueSet>
</CustomField>