force-app/main/default/objects/Trade__c/fields/Client_Bank_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Client_Bank_Incoming__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Bank (Incoming)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bank_Account__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Trades</relationshipLabel>
    <relationshipName>Trades</relationshipName>
    <type>Lookup</type>
</CustomField>