force-app/main/default/objects/Trade__c/fields/Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cost_Rate__c</fullName>
    <label>Cost Rate</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>