force-app/main/default/objects/Trade__c/fields/Deal_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Date__c</fullName>
    <label>Deal Date</label>
    <type>Date</type>
</CustomField>