force-app/main/default/objects/Trade__c/fields/Est_Net_Profit__c.field-meta.xml
<CustomField>
    <fullName>Est_Net_Profit__c</fullName>
    <label>Net Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>