force-app/main/default/objects/Trade__c/fields/Executed_By__c.field-meta.xml
<CustomField>
    <fullName>Executed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Executed Trades</relationshipLabel>
    <relationshipName>Executed_Trades</relationshipName>
    <type>Lookup</type>
</CustomField>