force-app/main/default/objects/Trade__c/fields/Import_Batch__c.field-meta.xml
<CustomField>
    <fullName>Import_Batch__c</fullName>
    <label>Import Batch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>