force-app/main/default/objects/Trade__c/fields/Legacy_Import__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Import</label>
    <type>Checkbox</type>
</CustomField>