force-app/main/default/objects/Trade__c/fields/Liquidity_Provider__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Provider__c</fullName>
    <label>Liquidity Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Echo</fullName>
            </value>
            <value>
                <fullName>OpenPayd</fullName>
            </value>
            <value>
                <fullName>Fuse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>