force-app/main/default/objects/Trade__c/fields/Lydiam_Margin_bps__c.field-meta.xml
<CustomField>
    <fullName>Lydiam_Margin_bps__c</fullName>
    <formula>IF(
    OR(ISBLANK(Market_Rate__c), Market_Rate__c = 0),
    0,
    ((Client_rate__c - Cost_Rate__c) / Market_Rate__c) * 10000
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lydiam Margin (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>