force-app/main/default/objects/Trade__c/fields/Lydiam_rate__c.field-meta.xml
<CustomField>
    <fullName>Lydiam_rate__c</fullName>
    <label>Lydiam rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>