force-app/main/default/objects/Trade__c/fields/Lydiam_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Lydiam_Revenue__c</fullName>
    <formula>(Lydiam_Margin_bps__c / 10000) * Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lydiam Revenue (GBP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>