force-app/main/default/objects/Trade__c/fields/Market_Rate__c.field-meta.xml
<CustomField>
    <fullName>Market_Rate__c</fullName>
    <label>Market Rate</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>