force-app/main/default/objects/Trade__c/fields/Number_of_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tokens__c</fullName>
    <label>Amount Bought</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>