force-app/main/default/objects/Trade__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Trades</relationshipLabel>
    <relationshipName>Partner_Trades</relationshipName>
    <type>Lookup</type>
</CustomField>