force-app/main/default/objects/Trade__c/fields/Sell__c.field-meta.xml
<CustomField>
    <fullName>Sell__c</fullName>
    <label>Sell</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buy</valueSetName>
    </valueSet>
</CustomField>