force-app/main/default/objects/Trade__c/fields/Settlement_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Timestamp__c</fullName>
    <label>Settlement Timestamp</label>
    <type>DateTime</type>
</CustomField>