force-app/main/default/objects/Trade__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>Web Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>