force-app/main/default/objects/Trade__c/fields/Trade_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Trade_Reference_Number__c</fullName>
    <label>Trade Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>