force-app/main/default/objects/Trade__c/fields/Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee__c</fullName>
    <label>Transaction Fee</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>