force-app/main/default/objects/Trade__c/validationRules/Prevent_Edit_Once_Settled.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_Once_Settled</fullName>
    <active>true</active>
    <description>Blocks editing a Trade record once Status is Settled, except by System Administrator</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Settled&quot;),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    NOT(ISNEW())
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>This trade has been settled and cannot be modified. Contact a System Administrator if changes are required.</errorMessage>
</ValidationRule>